# flood-detection-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/flood_detector/: config.py  data_handler.py  evaluate.py  inference_callback.py  predict.py  preprocess.py  train.py  training_monitor.py
src/flood_detector/models/: random_forest.py  unet.py
