[tool.poetry]
name = "flood-detection-pipeline"
version = "0.1.0"
description = "A pipeline for detecting floods from satellite imagery."
authors = ["Soheil"]
packages = [{include = "flood_detector", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^2.1"
rasterio = "^1.4.3"
scikit-learn = "^1.7.1"
tensorflow = {extras = ["and-cuda"], version = "^2.19.0"}
tqdm = "^4.67.1"
matplotlib = "^3.10.3"
opencv-python = "^4.12.0.88"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
